--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Arrastar e Soltar</title>
     <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
     <h1>Arrastar e Soltar</h1>
 
@@ -22,8 +24,9 @@
         <div class="area" data-name="c"></div>
     </div>
 
-    <footer>Criado pela B7Web</footer>
+    <footer>Criado por Ronald</footer>
 
     <script src="script.js"></script>
 </body>
+
 </html>
